<resources>
    <string name="app_name">HW06_Group1_42</string>
    <string name="cs">CS</string>
    <string name="sis">SIS</string>
    <string name="bio">BIO</string>
    <string name="other">Other</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="studentId">Student ID</string>
    <string name="dept">Department:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
</resources>
